cabal-version:      2.4
name:               openbsd
version:            0.1.0.0

synopsis: extra OpenBSD system-calls

-- A longer description of the package.
description: Adding missing OpenBSD systemcalls and some functions so that it is easy to follow openBSD's programming guidelines for security

bug-reports:        https://github.com/yobson/haskell-openbsd/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             James Hobson
maintainer:         james@hobson.space
extra-source-files: CHANGELOG.md

library
    exposed-modules:  System.OpenBSD

    build-depends:    base <5
    hs-source-dirs:   src
    default-language: Haskell2010
